[package]
name = "grid_gen"
version = "0.1.0"
edition = "2021"
description = "A procedural macro to make it easier to write combinatorial tests and benches on 
arguments and generics."
repository = "https://github.com/zommiommy/gridgen/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
keywords = ["test"]
categories = ["test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"